Closed Bug 246082 Opened 21 years ago Closed 21 years ago

nsSchemaComplexType crashes using WSDL Arrays

Categories

(Core Graveyard :: Web Services, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dmosedale, Assigned: dmosedale)

Details

(Keywords: fixed1.7, Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

This crash happens when doing stuff with SOAP and WSDL arrays. Looks like a brain fart in the code; fix is trivial.
Attached patch patch, v1Splinter Review
Assignee: web-services → dmose
Status: NEW → ASSIGNED
Attachment #150376 - Flags: superreview?(jst)
Attachment #150376 - Flags: review?(jst)
Attachment #150376 - Flags: review?(jst) → review+
Comment on attachment 150376 [details] [diff] [review] patch, v1 Duh. sr=jst
Attachment #150376 - Flags: superreview?(jst) → superreview+
Fixed on the trunk.
Summary: nsSchemaComplexType crashes incorrectly dereferencing null pointer → nsSchemaComplexType crashes using WSDL Arrays
Comment on attachment 150376 [details] [diff] [review] patch, v1 Crasher bug with trivially correct fix.
Attachment #150376 - Flags: approval1.7?
Comment on attachment 150376 [details] [diff] [review] patch, v1 a=asa (on behalf of drivers) for checkin to 1.7
Attachment #150376 - Flags: approval1.7? → approval1.7+
Checked into 1.7. bsmedberg: a trivial crasher fix; perhaps you want this for the aviary?
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Keywords: fixed1.7
Whiteboard: fixed-aviary1.0
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: