Fix XML Schema crash that happens when using WSDL/SOAP arrays (bug 246082).  r=timeless; sr=jst